# taller_wolfenstein3D

./: .gitignore  .gitmodules  0.yaml  CMakeLists.txt  README.md  config.txt  config.yaml  fakeWall.yaml  install.sh  main.cpp  map.yaml  med.yaml  out.yaml  test.yaml
Client/: CMakeLists.txt  main.cpp  readme_client.txt
Client/Exceptions/: SdlException.cpp  SdlException.h
Client/Game/: Enemy.cpp  Enemy.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  Positionable.cpp  Positionable.h  PositionableHandler.cpp  PositionableHandler.h  Wall.cpp  Wall.h  Wall_3d.cpp  Wall_3d.h
Client/Graphics/: Area.cpp  Area.h  DrawingInfo.cpp  DrawingInfo.h  ObjectDrawer.cpp  ObjectDrawer.h  RayCaster.cpp  RayCaster.h  RayInfo.cpp  RayInfo.h  Sdl3DTexture.cpp  Sdl3DTexture.h  SdlSprite.cpp  SdlSprite.h  SdlTexture.cpp  SdlWindow.cpp  SdlWindow.h
Client/Music/: SdlAudioPlayer.cpp
ClientQT/: client.qss  client2.cpp  client2.h  client2_main.cpp  config_checker.cpp  connection_checker.cpp
ClientQT/maps/: 2.yaml  map2.yaml  map3.yaml
client_src/: CMakeLists.txt  Makefile  README.md  client.cpp  client.qss  client_main.cpp  config_checker.cpp  readme.md
client_src/communication/: change_factory.cpp  client_parser.cpp  event_updater.cpp  server_handler.cpp  server_listener.cpp  server_updater.cpp
client_src/editor/: Editor.cpp
client_src/events/: change_processor.cpp
client_src/exceptions/: SdlException.cpp  connection_exception.cpp  file_exception.cpp  sdl_exception.cpp
client_src/game/: Enemy.cpp  EventHandler.cpp  Game.cpp  Map.cpp  Player.cpp  Positionable.cpp  PositionableHandler.cpp  Wall_3d.cpp  calculator.cpp  change_processor.cpp  client_enemy.cpp  client_event_handler.cpp  client_game.cpp  client_game_handler.cpp  client_map.cpp  client_map_board.cpp  client_map_generator.cpp  client_player.cpp  client_player_initializer.cpp  client_positionable.cpp  client_positionable_handler.cpp  client_wall.cpp  client_wall_3d.cpp  effects_handler.cpp  enemy.cpp  event_generator.cpp  event_handler.cpp  game.cpp  image_manager.cpp  in_game_change_processor.cpp  in_game_event_generator.cpp  in_game_event_handler.cpp  intro_handler.cpp  map.cpp  off_game_change_processor.cpp  off_game_event_generator.cpp  off_game_event_handler.cpp  off_game_handler.cpp  player.cpp  positionable.cpp  (+5 more)
client_src/graphics/: Area.cpp  DrawingInfo.cpp  ObjectDrawer.cpp  RayCaster.cpp  RayInfo.cpp  Sdl3DTexture.cpp  SdlSprite.cpp  SdlTexture.cpp  SdlWindow.cpp  area.cpp  drawable.cpp  drawing_assistant.cpp  drawing_assistant.h  drawing_info.cpp  game_screen.cpp  image_info.cpp  image_parser.cpp  map_info.cpp  menus_drawer.cpp  message_parameters.cpp  object_drawer.cpp  object_drawing_assistant.cpp  object_drawing_assistant.h  object_handler.cpp  object_info.cpp  object_info_provider.cpp  ray_caster.cpp  ray_caster_drawing_assistant.cpp  ray_casting_assistant.cpp  ray_info.cpp  sdl_3D_texture.cpp  sdl_message.cpp  sdl_sprite.cpp  sdl_texture.cpp  sdl_window.cpp  sprite_drawer.cpp  texture_manager.cpp  ui_drawer.cpp  weapon_drawer.cpp  window_drawer.cpp
client_src/music/: SdlAudioPlayer.cpp  audio_manager.cpp  sdl_audio_player.cpp
client_src/package_generation/: Makefile
client_src/resources/: client.qss  objects_info.txt
client_src/server_mockup/: event_handler_mock.cpp  map_mock.cpp  positionable_mock.cpp
common_src/: change.cpp  change_processor.cpp  config_parser.cpp  coordinate.cpp  event.cpp  event_factory.cpp  event_handler.cpp  event_proccesor.cpp  event_processor.cpp  event_queue.cpp  hit_handler.cpp  map_parser.cpp  network_acceptor.cpp  network_connection.cpp  network_error.cpp  thread.cpp
config/: config.yaml
docs/: _config.yml  index.md  links.md  pdfs.md
editor_src/: CMakeLists.txt  Makefile  QGridButton.cpp  editor.cpp  editor.qss  main.cpp  map_exporter.cpp  recent_popup.cpp  resources.cpp  resources.h  style.qss  window.qss
editor_src/package_generation/: Makefile  wolfenstein3d-editor_0.1.deb
editor_src/resources/: editor.qss
include/: client_routes.h  editor_routes.h  routes_server.h  server_routes.h
include/client/: Game.h  (+52 more)
lua_test/: CMakeLists.txt  test.cpp  test.lua
maps/: allTextures.yaml  allTextures_mod.yaml  blue_maze.yaml  bunker.yaml  dare_to_cross.yaml  dead_square.yaml  diagonal.yaml  fakeWall.yaml  four_corners.yaml  hallway.yaml  hunger_games.yaml  map.yaml  map2.yaml  map3.yaml  map4.yaml  prueba.yaml  test.yaml
server_src/: CMakeLists.txt  Makefile  README.md  clients_manager.h  game.cpp  main.cpp  map_generator.cpp  map_parser.cpp  matches.cpp  matches.h  server.cpp  server_main.cpp  server_menu_handler.cpp  server_menu_handler.h
server_src/bot_scripts/: bot.lua
server_src/entities/: barrel.cpp  blood_puddle.cpp  bullets.cpp  chest.cpp  crown.cpp  door.cpp  goblet.cpp  gun.cpp  hp_item.cpp  key.cpp  locked_door.cpp  lua_bot.cpp  machine_gun.cpp  positionable.cpp  regular_door.cpp  rocket_launcher.cpp  rpg.cpp  table.cpp  treasure.cpp  wall.cpp  water_puddle.cpp
server_src/events/: bots_manager.cpp  change_notifier.cpp  client.cpp  client_handler.cpp  client_manager.cpp  client_updater.cpp  event_factory.cpp  event_processor.cpp  game_handler.cpp  hit_handler.cpp
server_src/game/: SMG.cpp  barrel.cpp  blocking_item_handler.cpp  blood_puddle.cpp  bullets.cpp  chain_gun.cpp  chest.cpp  colission_handler.cpp  config_parser.cpp  coordinate.cpp  cross.cpp  crown.cpp  damage_calculator.cpp  default_weapon.cpp  door.cpp  drop_handler.cpp  enemy.cpp  event.cpp  event_handler.cpp  event_proccesor.cpp  event_queue.cpp  fake_wall.cpp  food.cpp  game.cpp  game_handler.cpp  goblet.cpp  gun.cpp  hit.cpp  hp_item.cpp  key.cpp  knife.cpp  locked_door.cpp  machine_gun.cpp  map.cpp  map_generator.cpp  map_parser.cpp  medikit.cpp  pickup_handler.cpp  pistol.cpp  player.cpp  (+13 more)
server_src/lua/: bot.lua  events.lua  lua_bot.cpp  lua_engine.cpp  movement_calculator.cpp
server_src/package_generation/: Makefile
server_src/utils/: map_generator.cpp  positions_calculator.cpp
ui/: Editor.ui  connect.ui  editor.ui  recents.ui
(+461 files in other folders)
